[project]
name = "py-leaky-bucket"
version = "0.1.0"
description = "Leaky bucket implementation in python with different persistence options"
authors = [
    { name = "DuneRaccoon", email = "benjamincsherro@hotmail.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["rate-limiter", "asyncio", "leaky-bucket", "redis", "sqlite3"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
dependencies = [ "redis>=3.5.3" ]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
